[gd_scene load_steps=35 format=2]

[ext_resource path="res://core/utils/KeyLabel.gd" type="Script" id=1]
[ext_resource path="res://interface/themes/General.tres" type="Theme" id=2]
[ext_resource path="res://interface/main_menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://interface/main_menu/PressAnyButton.gd" type="Script" id=4]
[ext_resource path="res://interface/menus/SettingsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/main_menu/Main.gd" type="Script" id=6]
[ext_resource path="res://interface/main_menu/NewGame.gd" type="Script" id=7]
[ext_resource path="res://interface/main_menu/Continue.gd" type="Script" id=8]
[ext_resource path="res://interface/sfx/button_back.wav" type="AudioStream" id=9]
[ext_resource path="res://interface/sfx/button_click.wav" type="AudioStream" id=10]
[ext_resource path="res://interface/sfx/main_menu_start.wav" type="AudioStream" id=11]
[ext_resource path="res://interface/sfx/button_focus_enter.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/music/MusicPlayer.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/music/Crimson Gold - Menu.ogg" type="AudioStream" id=14]
[ext_resource path="res://objects/spirit/Spirit.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/sprites/misc/white_square_red_glow.png" type="Texture" id=16]
[ext_resource path="res://core/utils/ButtonKey.tscn" type="PackedScene" id=17]
[ext_resource path="res://level/levels/adventurers_guild/AdventurersGuild.tscn" type="PackedScene" id=18]



[sub_resource type="Animation" id=1]
resource_name = "loop"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("LoopSfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1.51572, 0, 5.85634, 5.85634, 2.37841 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../GameName:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.307786, 0.307786, 1 ),
"update": 0,
"values": [ Vector2( 0, -159.194 ), Vector2( 0, -159.194 ), Vector2( 0, 150 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../../Spirit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 0.258816, 0.258816, 1 ),
"update": 0,
"values": [ Vector2( 960, 1180 ), Vector2( 960, 1180 ), Vector2( 960, 360 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../GameName:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../BlackBackground:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 680, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../WhiteBackground:rect_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../../../Camera2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Label:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "transition_out"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../GameName:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("TransitionOutSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "exit"
length = 0.001

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("../../../Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ), Vector2( 620, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WhiteBackground:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.757858, 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ), Vector2( 640, 1080 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../BlackBackground:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.241484, 1 ),
"update": 0,
"values": [ Vector2( 680, 0 ), Vector2( 680, 1080 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Buttons:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Buttons:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 404 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameNameMenu:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 0.277392, 0.277392, 1 ),
"update": 0,
"values": [ Vector2( 0, -128 ), Vector2( 0, -128 ), Vector2( 0, 150 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "transition_in"
length = 0.001

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "finished"
length = 0.001

[sub_resource type="Animation" id=9]
length = 0.001

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "finished"
length = 0.001

[sub_resource type="Animation" id=12]
resource_name = "start"
length = 0.001

[sub_resource type="Animation" id=13]
resource_name = "transition_out"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.13125, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 12800, 7200, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 360.0
initial_velocity_random = 1.0
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.04
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
angle = 360.0
angle_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 15 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="ColorRect" parent="CanvasLayer/Control"]
margin_right = 680.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteBackground" type="ColorRect" parent="CanvasLayer/Control"]
margin_right = 640.0
margin_bottom = 1080.0

[node name="GameName" type="Label" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
margin_top = 150.0
margin_bottom = 218.0
size_flags_horizontal = 3
text = "GAME_NAME"
align = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressAnyButton" type="Control" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/PressAnyButton"]
anims/loop = SubResource( 1 )
anims/start = SubResource( 2 )
anims/transition_out = SubResource( 3 )
next/start = "loop"

[node name="Label" type="Label" parent="CanvasLayer/Control/PressAnyButton"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -180.0
margin_bottom = -112.0
text = "PRESS ANY BUTTON"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/PressAnyButton"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionOutSfx" type="AudioStreamPlayer" parent="CanvasLayer/Control/PressAnyButton"]
stream = ExtResource( 11 )
bus = "Sfx"

[node name="LoopSfx" type="AudioStreamPlayer" parent="CanvasLayer/Control/PressAnyButton"]
stream = ExtResource( 10 )
bus = "Sfx"

[node name="Main" type="Control" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -1312.0
margin_bottom = -32.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameNameMenu" type="Label" parent="CanvasLayer/Control/Main"]
anchor_right = 1.0
margin_top = 150.0
margin_right = 64.0
margin_bottom = 218.0
rect_min_size = Vector2( 640, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME_NAME"
align = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="CanvasLayer/Control/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -104.0
margin_right = 288.0
margin_bottom = 168.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Main/Buttons"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="BoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Main/Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" parent="CanvasLayer/Control/Main/Buttons/BoxContainer" instance=ExtResource( 17 )]
margin_right = 576.0
margin_bottom = 68.0
text = "NEW_GAME"
press_sfx = ExtResource( 10 )
focus_enter_sfx = ExtResource( 12 )

[node name="ContinueButton" parent="CanvasLayer/Control/Main/Buttons/BoxContainer" instance=ExtResource( 17 )]
margin_top = 84.0
margin_right = 576.0
margin_bottom = 152.0
text = "CONTINUE"
press_sfx = ExtResource( 10 )
focus_enter_sfx = ExtResource( 12 )

[node name="SettingsButton" parent="CanvasLayer/Control/Main/Buttons/BoxContainer" instance=ExtResource( 17 )]
margin_top = 168.0
margin_right = 576.0
margin_bottom = 236.0
text = "SETTINGS"
press_sfx = ExtResource( 10 )
focus_enter_sfx = ExtResource( 12 )

[node name="ExitButton" parent="CanvasLayer/Control/Main/Buttons/BoxContainer" instance=ExtResource( 17 )]
margin_top = 252.0
margin_right = 576.0
margin_bottom = 320.0
text = "EXIT TO DESKTOP"
press_sfx = ExtResource( 9 )
focus_enter_sfx = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Main"]
anims/exit = SubResource( 4 )
anims/start = SubResource( 5 )
anims/transition_in = SubResource( 6 )
anims/transition_out = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="NewGame" type="Control" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -1312.0
margin_bottom = -32.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
new_game_scene = ExtResource( 18 )

[node name="NewGameLabel" type="Label" parent="CanvasLayer/Control/NewGame"]
anchor_right = 1.0
margin_top = 153.066
margin_bottom = 221.066
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NEW_GAME"
align = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/NewGame"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -70.0
margin_bottom = 70.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" parent="CanvasLayer/Control/NewGame/VBoxContainer" instance=ExtResource( 17 )]
margin_right = 576.0
margin_bottom = 68.0
text = "YES"
focus_enter_sfx = ExtResource( 12 )

[node name="NoButton" parent="CanvasLayer/Control/NewGame/VBoxContainer" instance=ExtResource( 17 )]
margin_top = 84.0
margin_right = 576.0
margin_bottom = 152.0
text = "BACK"
press_sfx = ExtResource( 9 )
focus_enter_sfx = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/NewGame"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/NewGame"]
anims/finished = SubResource( 8 )
anims/start = SubResource( 9 )
anims/transition_out = SubResource( 10 )

[node name="Continue" type="Control" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -1312.0
margin_bottom = -32.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueLabel" type="Label" parent="CanvasLayer/Control/Continue"]
anchor_right = 1.0
margin_top = 153.066
margin_bottom = 221.066
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONTINUE"
align = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Continue"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -70.0
margin_bottom = 70.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" parent="CanvasLayer/Control/Continue/VBoxContainer" instance=ExtResource( 17 )]
margin_right = 576.0
margin_bottom = 68.0
text = "YES"
press_sfx = ExtResource( 9 )
focus_enter_sfx = ExtResource( 12 )

[node name="BackButton" parent="CanvasLayer/Control/Continue/VBoxContainer" instance=ExtResource( 17 )]
margin_top = 84.0
margin_right = 576.0
margin_bottom = 152.0
text = "BACK"
press_sfx = ExtResource( 9 )
focus_enter_sfx = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Continue"]
anims/finished = SubResource( 11 )
anims/start = SubResource( 12 )
anims/transition_out = SubResource( 13 )

[node name="SettingsMenu" parent="CanvasLayer/Control" instance=ExtResource( 5 )]
visible = false

[node name="MusicPlayer" parent="." instance=ExtResource( 13 )]
stream = ExtResource( 14 )
autoplay = true

[node name="Spirit" parent="." instance=ExtResource( 15 )]
position = Vector2( 960, 360 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 620, 540 )
current = true

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0392157, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="Background"]
modulate = Color( 0.831373, 0.956863, 1, 1 )
position = Vector2( 982.738, 493.889 )
scale = Vector2( 0.1, 0.1 )
amount = 128
lifetime = 2.0
randomness = 1.0
process_material = SubResource( 16 )
texture = ExtResource( 16 )
[connection signal="finished" from="CanvasLayer/Control/PressAnyButton" to="." method="_on_PressAnyButton_finished"]
[connection signal="animation_changed" from="CanvasLayer/Control/PressAnyButton/AnimationPlayer" to="CanvasLayer/Control/PressAnyButton" method="_on_AnimationPlayer_animation_changed"]
[connection signal="continue_button_pressed" from="CanvasLayer/Control/Main" to="." method="_on_Main_continue_button_pressed"]
[connection signal="new_game_button_pressed" from="CanvasLayer/Control/Main" to="." method="_on_Main_new_game_button_pressed"]
[connection signal="settings_button_pressed" from="CanvasLayer/Control/Main" to="." method="_on_Main_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main/Buttons/BoxContainer/NewGameButton" to="CanvasLayer/Control/Main" method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main/Buttons/BoxContainer/ContinueButton" to="CanvasLayer/Control/Main" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main/Buttons/BoxContainer/SettingsButton" to="CanvasLayer/Control/Main" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main/Buttons/BoxContainer/ExitButton" to="CanvasLayer/Control/Main" method="_on_ExitButton_pressed"]
[connection signal="animation_finished" from="CanvasLayer/Control/Main/AnimationPlayer" to="CanvasLayer/Control/Main" method="_on_AnimationPlayer_animation_finished"]
[connection signal="no_selected" from="CanvasLayer/Control/NewGame" to="." method="_on_NewGame_no_selected"]
[connection signal="pressed" from="CanvasLayer/Control/NewGame/VBoxContainer/YesButton" to="CanvasLayer/Control/NewGame" method="_on_YesButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/NewGame/VBoxContainer/NoButton" to="CanvasLayer/Control/NewGame" method="_on_NoButton_pressed"]
[connection signal="back_selected" from="CanvasLayer/Control/Continue" to="." method="_on_Continue_back_selected"]
[connection signal="pressed" from="CanvasLayer/Control/Continue/VBoxContainer/YesButton" to="CanvasLayer/Control/Continue" method="_on_YesButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Continue/VBoxContainer/BackButton" to="CanvasLayer/Control/Continue" method="_on_BackButton_pressed"]
[connection signal="back_selected" from="CanvasLayer/Control/SettingsMenu" to="." method="_on_SettingsMenu_back_selected"]
